Fix: platform router jump update (#451)

--- a/src/pages/Integrations/index.less
+++ b/src/pages/Integrations/index.less
@@ -34,6 +34,6 @@
     color: #20ad7e;
   }
   .isNotReady {
-    color: #333;
+    color: #f00;
   }
 }
