--- a/src/pages/ProjectSummary/components/Integrations/index.less
+++ b/src/pages/ProjectSummary/components/Integrations/index.less
@@ -38,6 +38,6 @@
     color: #20ad7e;
   }
   .isNotReady {
-    color: #333;
+    color: #f00;
   }
 }
